samples/_failures_safe/1761342678_80c004_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd2020fc.c: In function ‘main’:
./samples/SAFE/__tmp_cd2020fc.c:130:11: error: expected ‘;’ at end of input
  130 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_cd2020fc.c:130:5: error: expected declaration or statement at end of input
  130 |     printf
      |     ^~~~~~
